# cipher-museum

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  background.css
src/backend/algorithms/: aes.rs  blowfish.rs  caesar_cipher.rs  ecc.rs  louis_xiv_great_cipher.rs
src/backend/cipher-curator/: Cargo.toml  api.rs
src/backend/cipher-curator/algorithms/: enigma_cipher.rs  rsa.rs  sha_256.rs  vigenere_cipher.rs
src/backend/cipher-curator/history/: caesar_cipher.rs.json  louis_xiv_great_cipher.rs.json  vigenere_cipher.rs.json
src/backend/cipher-curator/src/: main.rs
src/backend/history/: aes.rs.json  blowfish.rs.json  ecc.rs.json  enigma_cipher.rs.json  rsa.rs.json  sha_256.rs.json
src/components/: AlgorithmSelection.tsx  DonationButton.tsx  Encryptor.tsx  HistoryDropdown.tsx  InputOutputDisplay.tsx  algorithms_history.json
src/hooks/: useLodashState.ts
src/pages/: HistoryPage.tsx  MainPage.tsx
src/state/: useLodashState.ts
