[package]
name = "cipher-curator"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
block-modes = "0.8"
hex-literal = "0.2"
blowfish = "0.7"
sha2 = "0.10"
rsa = "0.8"
rand = "0.8"
p256 = "0.10"

warp = "0.3"
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
axum = "0.4"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }


[features]
default = []

